<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fibe</string>
    <string name="action_settings">Settings</string>
    <string name="login_screen">Login</string>
    <string name="signup_screen">Sign Up</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pickclass">PickclassActivity</string>
    <string name="title_activity_speaking">SpeakingActivity</string>

</resources>